log/build_2021-04-24_09-39-29/real_sender/stdout_stderr.log
running egg_info
writing ../../build/real_sender/real_sender.egg-info/PKG-INFO
writing dependency_links to ../../build/real_sender/real_sender.egg-info/dependency_links.txt
writing entry points to ../../build/real_sender/real_sender.egg-info/entry_points.txt
writing requirements to ../../build/real_sender/real_sender.egg-info/requires.txt
writing top-level names to ../../build/real_sender/real_sender.egg-info/top_level.txt
reading manifest file '../../build/real_sender/real_sender.egg-info/SOURCES.txt'
writing manifest file '../../build/real_sender/real_sender.egg-info/SOURCES.txt'
running build
running build_py
copying python_programs/real_sender.py -> /home/ubuntu/SSLRasp/build/real_sender/build/lib/python_programs
running install
running install_lib
copying /home/ubuntu/SSLRasp/build/real_sender/build/lib/python_programs/real_sender.py -> /home/ubuntu/SSLRasp/install/real_sender/lib/python3.8/site-packages/python_programs
byte-compiling /home/ubuntu/SSLRasp/install/real_sender/lib/python3.8/site-packages/python_programs/real_sender.py to real_sender.cpython-38.pyc
  File "/home/ubuntu/SSLRasp/install/real_sender/lib/python3.8/site-packages/python_programs/real_sender.py", line 30
    print(‘Hello’, end=’‘)
                ^
SyntaxError: invalid character in identifier

running install_egg_info
removing '/home/ubuntu/SSLRasp/install/real_sender/lib/python3.8/site-packages/real_sender-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/real_sender/real_sender.egg-info to /home/ubuntu/SSLRasp/install/real_sender/lib/python3.8/site-packages/real_sender-0.0.0-py3.8.egg-info
running install_scripts
Installing real_send script to /home/ubuntu/SSLRasp/install/real_sender/lib/real_sender
writing list of installed files to '/home/ubuntu/SSLRasp/build/real_sender/install.log'
